--- a/401.md
+++ b/401.md
@@ -1,18 +1,18 @@
 ## Code 401 Reading Notes
 
 
-|Readings|Title                                                                                     |
-|--------|------------------------------------------------------------------------------------------|
-|Read1   |[Node Ecosystem, TDD, CI/CD](https://ghofrandayyat.github.io/reading-notes/401/class-01)  |
-|Read2   |[class-02](https://ghofrandayyat.github.io/reading-notes/401/class-02)                    |
-|Read3   |[class-03](https://ghofrandayyat.github.io/reading-notes/401/class-03)                    |
-|Read4   |[class-04](https://ghofrandayyat.github.io/reading-notes/401/class-04)                    |
-|Read5   |[class-05](https://ghofrandayyat.github.io/reading-notes/401/class-05)                    |
-|Read6   |[class-06](https://ghofrandayyat.github.io/reading-notes/401/class-06)                    |
-|Read7   |[class-07](https://ghofrandayyat.github.io/reading-notes/401/class-07)                    |
-|Read8   |[class-08](https://ghofrandayyat.github.io/reading-notes/401/class-08)                    |
-|Read9   |[class-09](https://ghofrandayyat.github.io/reading-notes/401/class-09)                    |
-|Read10  |[class-10](https://ghofrandayyat.github.io/reading-notes/401/class-10)                    |
-|Read11  |[class-11](https://ghofrandayyat.github.io/reading-notes/401/class-11)                    |
-|Read12  |[class-12](https://ghofrandayyat.github.io/reading-notes/401/class-12)                    |
-|Read13  |[class-13](https://ghofrandayyat.github.io/reading-notes/401/class-13)                    |
+|Readings     |Title                                                                                     |
+|-------------|------------------------------------------------------------------------------------------|
+|Read1        |[Node Ecosystem, TDD, CI/CD](https://ghofrandayyat.github.io/reading-notes/401/class-01)  |
+|Prep-Readings|[Get Ready for 401](https://ghofrandayyat.github.io/reading-notes/401/Prep-Readings)      |
+|Read3        |[class-03](https://ghofrandayyat.github.io/reading-notes/401/class-03)                    |
+|Read4        |[class-04](https://ghofrandayyat.github.io/reading-notes/401/class-04)                    |
+|Read5        |[class-05](https://ghofrandayyat.github.io/reading-notes/401/class-05)                    |
+|Read6        |[class-06](https://ghofrandayyat.github.io/reading-notes/401/class-06)                    |
+|Read7        |[class-07](https://ghofrandayyat.github.io/reading-notes/401/class-07)                    |
+|Read8        |[class-08](https://ghofrandayyat.github.io/reading-notes/401/class-08)                    |
+|Read9        |[class-09](https://ghofrandayyat.github.io/reading-notes/401/class-09)                    |
+|Read10       |[class-10](https://ghofrandayyat.github.io/reading-notes/401/class-10)                    |
+|Read11       |[class-11](https://ghofrandayyat.github.io/reading-notes/401/class-11)                    |
+|Read12       |[class-12](https://ghofrandayyat.github.io/reading-notes/401/class-12)                    |
+|Read13       |[class-13](https://ghofrandayyat.github.io/reading-notes/401/class-13)                    |
