--- a/401.md
+++ b/401.md
@@ -5,7 +5,7 @@
 |-------------|------------------------------------------------------------------------------------------|
 |Prep-Readings|[Get Ready for 401](https://ghofrandayyat.github.io/reading-notes/401/Prep-Readings)      |
 |Read1        |[Node Ecosystem, TDD, CI/CD](https://ghofrandayyat.github.io/reading-notes/401/class-01)  |
-|Read3        |[class-03](https://ghofrandayyat.github.io/reading-notes/401/class-03)                    |
+|Read3        |[Express](https://ghofrandayyat.github.io/reading-notes/401/class-02)                     |
 |Read4        |[class-04](https://ghofrandayyat.github.io/reading-notes/401/class-04)                    |
 |Read5        |[class-05](https://ghofrandayyat.github.io/reading-notes/401/class-05)                    |
 |Read6        |[class-06](https://ghofrandayyat.github.io/reading-notes/401/class-06)                    |
