--- a/401.md
+++ b/401.md
@@ -7,7 +7,7 @@
 |Read1        |[Promises,superagent,Array.reduce(),Array.map()](https://ghofrandayyat.github.io/reading-notes/401/class-01)|
 |Read2        |[Node Ecosystem, TDD, CI/CD](https://ghofrandayyat.github.io/reading-notes/401/class-02)  |
 |Read3        |[Routing and Middleware ](https://ghofrandayyat.github.io/reading-notes/401/class-03)                    |
-|Read5        |[class-05](https://ghofrandayyat.github.io/reading-notes/401/class-05)                    |
+|Read5        |[SQL & noSQL](https://ghofrandayyat.github.io/reading-notes/401/class-04)                    |
 |Read6        |[class-06](https://ghofrandayyat.github.io/reading-notes/401/class-06)                    |
 |Read7        |[class-07](https://ghofrandayyat.github.io/reading-notes/401/class-07)                    |
 |Read8        |[class-08](https://ghofrandayyat.github.io/reading-notes/401/class-08)                    |
