--- a/401.md
+++ b/401.md
@@ -9,7 +9,7 @@
 |Read3        |[Routing and Middleware ](https://ghofrandayyat.github.io/reading-notes/401/class-03)     |
 |Read5        |[SQL & noSQL](https://ghofrandayyat.github.io/reading-notes/401/class-04)                 |
 |Read6        |[Linked Lists](https://ghofrandayyat.github.io/reading-notes/401/class-05)                |
-|Read7        |[class-07](https://ghofrandayyat.github.io/reading-notes/401/class-07)                    |
+|Read7        |[Securing](https://ghofrandayyat.github.io/reading-notes/401/class-06)                    |
 |Read8        |[class-08](https://ghofrandayyat.github.io/reading-notes/401/class-08)                    |
 |Read9        |[class-09](https://ghofrandayyat.github.io/reading-notes/401/class-09)                    |
 |Read10       |[class-10](https://ghofrandayyat.github.io/reading-notes/401/class-10)                    |
