--- a/401.md
+++ b/401.md
@@ -7,12 +7,12 @@
 |Read1        |[Promises,superagent,Array.reduce(),Array.map()](https://ghofrandayyat.github.io/reading-notes/401/class-01)|
 |Read2        |[Node Ecosystem, TDD, CI/CD](https://ghofrandayyat.github.io/reading-notes/401/class-02)  |
 |Read3        |[Routing and Middleware ](https://ghofrandayyat.github.io/reading-notes/401/class-03)     |
-|Read5        |[SQL & noSQL](https://ghofrandayyat.github.io/reading-notes/401/class-04)                 |
-|Read6        |[Linked Lists](https://ghofrandayyat.github.io/reading-notes/401/class-05)                |
-|Read7        |[Securing](https://ghofrandayyat.github.io/reading-notes/401/class-06)                    |
-|Read8        |[class-08](https://ghofrandayyat.github.io/reading-notes/401/class-08)                    |
-|Read9        |[class-09](https://ghofrandayyat.github.io/reading-notes/401/class-09)                    |
-|Read10       |[class-10](https://ghofrandayyat.github.io/reading-notes/401/class-10)                    |
-|Read11       |[class-11](https://ghofrandayyat.github.io/reading-notes/401/class-11)                    |
-|Read12       |[class-12](https://ghofrandayyat.github.io/reading-notes/401/class-12)                    |
-|Read13       |[class-13](https://ghofrandayyat.github.io/reading-notes/401/class-13)                    |
+|Read4        |[SQL & noSQL](https://ghofrandayyat.github.io/reading-notes/401/class-04)                 |
+|Read5        |[Linked Lists](https://ghofrandayyat.github.io/reading-notes/401/class-05)                |
+|Read6        |[Securing](https://ghofrandayyat.github.io/reading-notes/401/class-06)                    |
+|Read7        |[Bearer Authorization](https://ghofrandayyat.github.io/reading-notes/401/class-07)        |
+|Read8        |[class-09](https://ghofrandayyat.github.io/reading-notes/401/class-09)                    |
+|Read9        |[class-10](https://ghofrandayyat.github.io/reading-notes/401/class-10)                    |
+|Read10       |[class-11](https://ghofrandayyat.github.io/reading-notes/401/class-11)                    |
+|Read11       |[class-12](https://ghofrandayyat.github.io/reading-notes/401/class-12)                    |
+|Read12       |[class-13](https://ghofrandayyat.github.io/reading-notes/401/class-13)                    |
