--- a/401.md
+++ b/401.md
@@ -11,7 +11,7 @@
 |Read5        |[Linked Lists](https://ghofrandayyat.github.io/reading-notes/401/class-05)                |
 |Read6        |[Securing](https://ghofrandayyat.github.io/reading-notes/401/class-06)                    |
 |Read7        |[Bearer Authorization](https://ghofrandayyat.github.io/reading-notes/401/class-07)        |
-|Read8        |[class-09](https://ghofrandayyat.github.io/reading-notes/401/class-09)                    |
+|Read8        |[Access Control (ACL)](https://ghofrandayyat.github.io/reading-notes/401/class-08)        |
 |Read9        |[class-10](https://ghofrandayyat.github.io/reading-notes/401/class-10)                    |
 |Read10       |[class-11](https://ghofrandayyat.github.io/reading-notes/401/class-11)                    |
 |Read11       |[class-12](https://ghofrandayyat.github.io/reading-notes/401/class-12)                    |
