--- a/401.md
+++ b/401.md
@@ -15,4 +15,4 @@
 |Read9        |[OAut](https://ghofrandayyat.github.io/reading-notes/401/class-09)                        |
 |Read10       |[Stacks and Queues](https://ghofrandayyat.github.io/reading-notes/401/class-10)           |
 |Read11       |[Event Driven Applications](https://ghofrandayyat.github.io/reading-notes/401/class-11)   |
-|Read12       |[class-13](https://ghofrandayyat.github.io/reading-notes/401/class-13)                    |
+|Read12       |[Socket](https://ghofrandayyat.github.io/reading-notes/401/class-12)                      |
