--- a/401.md
+++ b/401.md
@@ -17,3 +17,4 @@
 |Read11       |[Event Driven Applications](https://ghofrandayyat.github.io/reading-notes/401/class-11)   |
 |Read12       |[Socket](https://ghofrandayyat.github.io/reading-notes/401/class-12)                      |
 |Read13       |[Message Queues(Chating)](https://ghofrandayyat.github.io/reading-notes/401/class-13)     |
+|Read14       |[AWS SNS and SQS](https://ghofrandayyat.github.io/reading-notes/401/class-14)             |
