--- a/401.md
+++ b/401.md
@@ -19,3 +19,4 @@
 |Read13       |[Message Queues(Chating)](https://ghofrandayyat.github.io/reading-notes/401/class-13)     |
 |Read14       |[AWS SNS and SQS](https://ghofrandayyat.github.io/reading-notes/401/class-14)             |
 |Read15       |[Trees](https://ghofrandayyat.github.io/reading-notes/401/class-15)                       |
+|Read16       |[AWS :Cloud Servers](https://ghofrandayyat.github.io/reading-notes/401/class-16)          |
