--- a/401.md
+++ b/401.md
@@ -24,3 +24,4 @@
 |Read18       |[AWS: API, Dynamo and Lambda](https://ghofrandayyat.github.io/reading-notes/401/class-18) |
 |Read19       |[AWS: Events](https://ghofrandayyat.github.io/reading-notes/401/class-19)                 |
 |Read26       |[Component Based UI](https://ghofrandayyat.github.io/reading-notes/401/class-26)          |
+|Read27       |[Props and State](https://ghofrandayyat.github.io/reading-notes/401/class-27)             |
