--- a/401.md
+++ b/401.md
@@ -25,3 +25,4 @@
 |Read19       |[AWS: Events](https://ghofrandayyat.github.io/reading-notes/401/class-19)                 |
 |Read26       |[Component Based UI](https://ghofrandayyat.github.io/reading-notes/401/class-26)          |
 |Read27       |[Props and State](https://ghofrandayyat.github.io/reading-notes/401/class-27)             |
+|Read28       |[Component Composition](https://ghofrandayyat.github.io/reading-notes/401/class-28)       |
