--- a/401.md
+++ b/401.md
@@ -27,4 +27,4 @@
 |Read27       |[Props and State](https://ghofrandayyat.github.io/reading-notes/401/class-27)             |
 |Read28       |[Component Composition](https://ghofrandayyat.github.io/reading-notes/401/class-28)       |
 |Read29       |[Routing](https://ghofrandayyat.github.io/reading-notes/401/class-29)                     |
-|Read30       |[Hash Tables](https://ghofrandayyat.github.io/reading-notes/401/class-30)                 |
+|Read30       |[#Hash Tables](https://ghofrandayyat.github.io/reading-notes/401/class-30)                 |
