--- a/401.md
+++ b/401.md
@@ -28,4 +28,5 @@
 |Read28       |[Component Composition](https://ghofrandayyat.github.io/reading-notes/401/class-28)       |
 |Read29       |[Routing](https://ghofrandayyat.github.io/reading-notes/401/class-29)                     |
 |Read30       |[#Hash Tables](https://ghofrandayyat.github.io/reading-notes/401/class-30)                |
-|Read30       |[Hooks API](https://ghofrandayyat.github.io/reading-notes/401/class-30)                   |
+|Read31       |[Hooks API](https://ghofrandayyat.github.io/reading-notes/401/class-31)                   |
+|Read32       |[Custom Hooks](https://ghofrandayyat.github.io/reading-notes/401/class-32)                |
