--- a/401.md
+++ b/401.md
@@ -31,5 +31,5 @@
 |Read31       |[Hooks API](https://ghofrandayyat.github.io/reading-notes/401/class-31)                   |
 |Read32       |[Custom Hooks](https://ghofrandayyat.github.io/reading-notes/401/class-32)                |
 |Read33       |[Context API](https://ghofrandayyat.github.io/reading-notes/401/class-33)                 |
-|Read34       |[<Login /> and <Auth />](https://ghofrandayyat.github.io/reading-notes/401/class-34)      |
+|Read34       |[Login  and Auth ](https://ghofrandayyat.github.io/reading-notes/401/class-34)            |
 |Read35       |[Graphs](https://ghofrandayyat.github.io/reading-notes/401/class-35)                      |
