--- a/401.md
+++ b/401.md
@@ -33,3 +33,4 @@
 |Read33       |[Context API](https://ghofrandayyat.github.io/reading-notes/401/class-33)                 |
 |Read34       |[Login  and Auth ](https://ghofrandayyat.github.io/reading-notes/401/class-34)            |
 |Read35       |[Graphs](https://ghofrandayyat.github.io/reading-notes/401/class-35)                      |
+|Read36       |[Application State with Redux](https://ghofrandayyat.github.io/reading-notes/401/class-35)|
