--- a/401.md
+++ b/401.md
@@ -35,3 +35,4 @@
 |Read35       |[Graphs](https://ghofrandayyat.github.io/reading-notes/401/class-35)                      |
 |Read36       |[Application State with Redux](https://ghofrandayyat.github.io/reading-notes/401/class-36)|
 |Read37       |[ Redux - Combined Reducers](https://ghofrandayyat.github.io/reading-notes/401/class-37)  |
+|Read38       |[Redux - Asynchronous Actions](https://ghofrandayyat.github.io/reading-notes/401/class-38)|
